--- a/index.html
+++ b/index.html
@@ -11,24 +11,33 @@
         <h1 class="bold" id="banner">Dasmoto's Arts & Crafts</h1>
         <div>
             <h2 class="bold brush">Brushes</h2>
-            <img class="product" src="./hacksaw.jpeg" alt="Browser Not Supported">
-            <h3>Hacksaw Brushes</h3>
-            <span class="bold">Starting at $3.00 / brush.</span>
-            <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes.</p>
+            <div class="product">
+                <img src="./hacksaw.jpeg" alt="Browser Not Supported">
+                <h3>Hacksaw Brushes</h3>
+                <span class="bold">Starting at $3.00 / brush.</span>
+                <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes.</p>
+            </div>
+            
         </div>
         <div>
             <h2 class="bold frame">Frames</h2>
-            <img class="product" src="./frames.jpeg" alt="Browser Not Supported">
-            <h3>Art Frames (assorted)</h3>
-            <span class="bold">Starting at $2.00 / frame.</span>
-            <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs.</p>
+            <div class="product">
+                <img src="./frames.jpeg" alt="Browser Not Supported">
+                <h3>Art Frames (assorted)</h3>
+                <span class="bold">Starting at $2.00 / frame.</span>
+                <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs.</p>
+            </div>
+
         </div>
         <div>
             <h2 class="bold paint">Paint</h2>
-            <img class="product" src="./finnish.jpeg" alt="Browser Not Supported">
-            <h3>Clean Finnish Paint</h3>
-            <span class="bold">Starting at $5.00 / tube.</span>
-            <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.</p>
+            <div class="product">
+                <img src="./finnish.jpeg" alt="Browser Not Supported">
+                <h3>Clean Finnish Paint</h3>
+                <span class="bold">Starting at $5.00 / tube.</span>
+                <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.</p>
+            </div>
+
         </div>
     </body>
 </html>
