--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="product">
                 <img src="./hacksaw.jpeg" alt="Browser Not Supported">
                 <h3>Hacksaw Brushes</h3>
-                <span class="bold">Starting at $3.00 / brush.</span>
+                <a class="bold" href="">Starting at $3.00 / brush</a>
                 <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes.</p>
             </div>
             
@@ -24,7 +24,7 @@
             <div class="product">
                 <img src="./frames.jpeg" alt="Browser Not Supported">
                 <h3>Art Frames (assorted)</h3>
-                <span class="bold">Starting at $2.00 / frame.</span>
+                <a class="bold" href="">Starting at $2.00 / frame</a>
                 <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs.</p>
             </div>
 
@@ -34,7 +34,7 @@
             <div class="product">
                 <img src="./finnish.jpeg" alt="Browser Not Supported">
                 <h3>Clean Finnish Paint</h3>
-                <span class="bold">Starting at $5.00 / tube.</span>
+                <a class="bold" href="">Starting at $5.00 / tube</a>
                 <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.</p>
             </div>
 
